@@ -43,8 +43,10 @@ public:
     ~MetadataHubMngr();
 
     static QPointer<MetadataHubMngr> internalPtr;
+    static bool                      isCreated();
 
     void addPending(ImageInfo& info);
+    void requestShutDown();
 
 Q_SIGNALS:
 
@@ -59,7 +61,7 @@ private:
     MetadataHubMngr();
 
     class Private;
-    Private* d;
+    Private* const d;
 };
 
 } // namespace Digikam
