@@ -35,4 +35,5 @@ BUGFIXES FROM BUGZILLA:
 024 ==> 286398 - Allow to input coordinates manually in items list.
 025 ==> 367847 - digiKam crashed when we right click on albums area.
 026 ==> 242630 - Write an handbook section for Metadata Edit tool.
-027 ==> 
+027 ==> 367642 - IPTC/XMP metadata not saved to image on exit when Lazy Sync is on.
+028 ==> 
